updating my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Jamaica,NY</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Video Games,Anime,Youtube,Tesla or anything Ev</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Full Stack Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>80-15 167st</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to code for a living </p>
     </section>
 
     <footer id="footer">
